# jumpthefive

./: Makefile  README.md  Shakefile.hs  jumpthefive.cabal  package.json
examples/: toll-free.txt
src/: CLI.hs  JumpTheFive.hs
