name:           jumpthefive
version:        0.0.1
category:       Cryptography
synopsis:       Watch The Wire S01E05: The Pager
description:    an elementary symmetric chiffre for pragmatically protecting one's effects
license:        BSD3
license-file:   LICENSE.md
author:         Andrew Pennebaker
maintainer:     andrew.pennebaker@gmail.com
build-type:     Simple
cabal-version:  >=1.8

source-repository head
  type:     git
  location: git://github.com/mcandre/jumpthefive.git

library
  build-depends:
    base              >= 4.3.1.0 && < 5,
    parallel          >= 3.2.0.3 && < 4

  exposed-modules: JumpTheFive

  ghc-options: -Wall -fwarn-tabs
  hs-source-dirs: src

executable jumpthefive
  build-depends:
    base              >= 4.3.1.0 && < 5,
    parallel          >= 3.2.0.3 && < 4

  main-is: CLI.hs
  ghc-options: -Wall -fwarn-tabs
  hs-source-dirs: src

test-suite reference
  build-depends:
    base                        >= 4.3.1.0 && < 5,
    hlint                       >= 2.1.10 && < 3,
    shake                       >= 0.16.4 && < 0.17,
    parallel                    >= 3.2.0.3 && < 4

  ghc-options:        -Wall -fwarn-tabs
  hs-source-dirs:     src
  main-is:            CLI.hs
  type:               exitcode-stdio-1.0
